test/rails_app/app/views/validates/_form.html.erb
<%= form_for(@validate) do |f| %>
  <% if @validate.errors.any? %>
    <div id="error_explanation">
      <h2><%= pluralize(@validate.errors.count, "error") %> prohibited this validate from being saved:</h2>

      <ul>
      <% @validate.errors.full_messages.each do |msg| %>
        <li><%= msg %></li>
      <% end %>
      </ul>
    </div>
  <% end %>

  <div class="field">
    <%= f.label :standing_test %><br />
    <%= f.check_box :standing_test %>
  </div>
  <div class="field">
    <%= f.label :sitting_test %><br />
    <%= f.check_box :sitting_test %>
  </div>
  <div class="field">
    <%= f.label :fat_guy_test %><br />
    <%= f.check_box :fat_guy_test %>
  </div>
  <div class="field">
    <%= f.label :evel_knievel_jumping_test %><br />
    <%= f.check_box :evel_knievel_jumping_test %>
  </div>
  <div class="field">
    <%= f.label :tester %><br />
    <%= f.text_field :tester %>
  </div>
  <div class="field">
    <%= f.label :product_id %><br />
    <%= f.number_field :product_id %>
  </div>
  <div class="actions">
    <%= f.submit %>
  </div>
<% end %>
