test/rails_app/app/views/rejects/_form.html.erb
<%= form_for(@reject) do |f| %>
  <% if @reject.errors.any? %>
    <div id="error_explanation">
      <h2><%= pluralize(@reject.errors.count, "error") %> prohibited this reject from being saved:</h2>

      <ul>
      <% @reject.errors.full_messages.each do |msg| %>
        <li><%= msg %></li>
      <% end %>
      </ul>
    </div>
  <% end %>

  <div class="field">
    <%= f.label :product_id %><br />
    <%= f.number_field :product_id %>
  </div>
  <div class="actions">
    <%= f.submit %>
  </div>
<% end %>
